# driveIT2.0

./: .gitignore  README.md  app.py  db  pyproject.toml  repo.py
src/: app.py  db  ml_model.py  replaces.json  repo.py
src/DRIVEITSERV.egg-info/: PKG-INFO  SOURCES.txt
